<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/menu_catalog" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/menu_exit" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_configure"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_configure" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
