<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.realtech.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.example.realtech.ui.catalog.CatalogFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_car"
        android:name="com.example.realtech.ui.car.CarFragment"
        android:label="@string/menu_car"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/nav_configure"
        android:name="com.example.realtech.ui.configure.ConfigureFragment"
        android:label="@string/menu_configure"
        tools:layout="@layout/fragment_configure" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.realtech.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.realtech.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
</navigation>