<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="28dp"
                android:text="@string/mp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/card_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="65dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_type_label" />

            <EditText
                android:id="@+id/number_car_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="65dp"
                android:ems="10"
                android:hint="@string/nt"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_type_spinner" />

            <EditText
                android:id="@+id/dni_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="65dp"
                android:ems="10"
                android:hint="DNI"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_car_input" />

            <EditText
                android:id="@+id/direction_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="65dp"
                android:ems="10"
                android:hint="@string/direc"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dni_input" />

            <EditText
                android:id="@+id/postal_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="65dp"
                android:ems="10"
                android:hint="@string/cpos"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/direction_input" />

            <TextView
                android:id="@+id/subtotal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/st"
                android:textColor="@color/design_default_color_primary"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postal_input" />

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_rounded_blue1"
                android:padding="10dp"
                android:text="@string/buy"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtotal_label" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>